Dactyl Rails2 Merge3: Template Admin

--- a/public/stylesheets/ui/custom_dialogs.css
+++ b/public/stylesheets/ui/custom_dialogs.css
@@ -1,37 +1,37 @@
-.docalog .custom {
+.docalog .custom, .tempalog .custom {
   width: 500px;
 }
-  .docalog .row {
+  .docalog .row, .tempalog .row {
     height: 30px;
     margin-bottom: 15px;
     position: relative;
     text-align: left;
   }
-    .docalog .row.tall {
+    .docalog .row.tall, .tempalog .row.tall {
       height: 90px;
     }
-    .docalog .row.last {
+    .docalog .row.last, .tempalog .row.last {
       margin-bottom: 0;
     }
-  .docalog input.changed, .docalog textarea.changed {
+  .docalog input.changed, .tempalog input.changed, .docalog textarea.changed, .tempalog textarea.changed {
     border-color: #2a955c !important;
   }
-  .docalog label {
+  .docalog label, .tempalog label {
     background-color: #000;
     display: block;
-    max-width: 120px;
+    max-width: 130px;
     font-size: 11px;
     color: #ccc;
     text-align: left;
     position: absolute;
     left: 0;
   }
-  .docalog .text_input {
+  .docalog .text_input, .tempalog .text_input {
     position: absolute;
     right: 0;
     width: 370px;
   }
-  .docalog textarea.content {
+  .docalog textarea.content, .tempalog textarea.content {
     float: right;
     width: 366px; height: 78px;
     display: block;
@@ -39,6 +39,10 @@
   .docalog select {
     position: absolute;
     left: 115px; top: 5px;
+  }
+  .tempalog select {
+    position: absolute;
+    left: 120px;
   }
 
 #pubdate_dialog {
