--- a/public/stylesheets/pages/workspace.css
+++ b/public/stylesheets/pages/workspace.css
@@ -319,12 +319,14 @@ div.full_page_background {
 .search_tab_content,
 .publish_tab_content,
 .accounts_tab_content,
+.templates_tab_content,
 .help_tab_content {
   display: none;
 }
   body.search_panel_tab .search_tab_content,
   body.publish_panel_tab .publish_tab_content,
   body.accounts_panel_tab .accounts_tab_content,
+  body.templates_panel_tab .templates_tab_content,
   body.help_panel_tab .help_tab_content {
     display: block;
   }
