DE Screen: View modifications, Group CRUD (with and w/o template), Group Tree Navigation

--- a/app/views/documents/_viewer_editing.html.erb
+++ b/app/views/documents/_viewer_editing.html.erb
@@ -15,6 +15,9 @@
           email    : "<%=raw @reviewer_inviter.email %>"
         }
       <% end %>
+
+      opts['templateList'] = <%= raw @template_list %>;
+
       dc.app.editor.initialize(docId, opts);
     <% end %>
     currentDocument.$('.DV-logoLink, .DV-footerLogoLink').attr({
