--- a/public/stylesheets/ui/templates.css
+++ b/public/stylesheets/ui/templates.css
@@ -86,7 +86,7 @@
     margin-left: 8px;
 }
 
-.minibutton.delete {
+.minibutton.delete_template {
     position: relative;
     bottom  : 24px;
     left   : 280px;
