--- a/public/stylesheets/ui/accounts.css
+++ b/public/stylesheets/ui/accounts.css
@@ -46,6 +46,7 @@ body.accounts_panel_tab #organization_list {
 .user.account_view {
   clear: both;
   width: 600px;
+  height: 480px;
   margin: 0 auto;
 }
 
