Save & Exit button on DE screen

--- a/public/stylesheets/pages/viewer_editing.css
+++ b/public/stylesheets/pages/viewer_editing.css
@@ -168,6 +168,10 @@
         width: 70px;
     }
 
+    #control_panel .save_exit {
+        width: 70px;
+    }
+
     #control_panel .group_title {
         font-size: 14px;
         color: #004276;
