Initial QC layout implementation

--- a/app/views/documents/_viewer_editing.html.erb
+++ b/app/views/documents/_viewer_editing.html.erb
@@ -7,7 +7,8 @@
       var docId = <%=raw @current_document.id %>;
       var opts        = {
         isOwner         : <%=raw !!@allowed_to_edit %>,
-        isReviewer      : <%=raw !!@allowed_to_review %>
+        isReviewer      : <%=raw !!@allowed_to_review %>,
+        status          : <%=raw @current_document.status %>
       }
       <% if @reviewer_inviter %>
         opts['reviewerInviter'] = {
