--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -43,7 +43,8 @@
         :cache_busting => @allowed_to_edit
       }).to_json.html_safe %>, {
         <% if @no_sidebar %>sidebar: false,<% end %>
-        container: '#viewer'
+        container: '#viewer',
+        layout: '<%=@orientation%>'
       });
     <% end %>
   </script>
