Filter viewer anno-groups by doc status; various minor UI bug fixes/tweaks

--- a/public/stylesheets/pages/viewer_editing.css
+++ b/public/stylesheets/pages/viewer_editing.css
@@ -318,6 +318,10 @@ div input.error {
     overflow: auto;
 }
 
+.qc_editor_view.de_review_view {
+    width: 400px;
+}
+
 
 /*---------------------------- The Section Editor ----------------------------*/
 #section_editor, #annotation_editor, div.dialog {
