Added QA Drop Claim functionality, and non-functional file note UI

--- a/public/stylesheets/pages/viewer_editing.css
+++ b/public/stylesheets/pages/viewer_editing.css
@@ -185,6 +185,9 @@
         width: 35px;
     }
 
+    #control_panel .file_note {
+        width: 60px;
+    }
 
 
     #control_panel .group_title {
