QA Rating of QC work

--- a/public/stylesheets/ui/custom_dialogs.css
+++ b/public/stylesheets/ui/custom_dialogs.css
@@ -7,6 +7,10 @@
     position: relative;
     text-align: left;
   }
+    .tempalog .row.med {
+        height: 60px;
+    }
+
     .docalog .row.tall, .tempalog .row.tall {
       height: 90px;
     }
