Bug Fixes and introduction of Extraction tab

--- a/public/stylesheets/pages/viewer_editing.css
+++ b/public/stylesheets/pages/viewer_editing.css
@@ -297,6 +297,7 @@
     .annotation_name, .annotation_value {
         display: inline-block;
         width: 37%;
+        word-wrap: break-word;
     }
 
     .annotation_separator {
