--- a/public/stylesheets/pages/viewer_editing.css
+++ b/public/stylesheets/pages/viewer_editing.css
@@ -204,9 +204,7 @@
         font-weight: bold;
         color: black;
         text-transform: none;
-        margin-top: 10px;
-        margin-left: 10px;
-        margin-bottom: 10px;
+        margin: 10px 15px 10px 10px;
     }
 
     #control_panel #qa_notes {
