--- a/public/stylesheets/new_layout.css
+++ b/public/stylesheets/new_layout.css
@@ -20,6 +20,15 @@ p.field_instructions {
 /*
  * INPUTS (GENERAL)
  */
+input {
+    border-radius: 5px;
+    margin-bottom: 3px;
+}
+
+input [type=radio] + label {
+    margin-top: 5px;
+}
+
 button {
     font: bold 12px Arial;
     min-width: 50px;
@@ -62,6 +71,8 @@ table.bordered {
     border-color: black;
     border-style: solid;
     margin-bottom: 10px;
+    border-radius: 5px;
+    width: 100%;
 }
 
 
@@ -72,7 +83,22 @@ div.centered_tab_content {
     display: inline-block;
     margin: auto;
     background: lightgray;
-    padding: 10px;
+    padding: 15px;
+    border-radius: 5px;
+}
+
+div.two_column_split {
+    display: inline-block;
+    width: 49%;
+    vertical-align: top;
+    padding-bottom: 10px;
+}
+
+div.three_column_split {
+    display: inline-block;
+    width: 32%;
+    vertical-align: top;
+    padding-bottom: 10px;
 }
 
 
