Finished beta for Supp DE

--- a/public/stylesheets/pages/viewer_editing.css
+++ b/public/stylesheets/pages/viewer_editing.css
@@ -217,6 +217,11 @@
         font-size: 14px;
     }
 
+    .group_listing.rejected .group_name a {
+        color: red;
+        text-decoration: line-through;
+    }
+
     .group_name {
         display: inline-block;
         width: 200px;
