--- a/public/stylesheets/ui/custom_dialogs.css
+++ b/public/stylesheets/ui/custom_dialogs.css
@@ -67,6 +67,7 @@
     text-align: left;
     left: 0;
     height: 25px;
+    margin-bottom: 5px;
 }
 .tempalog .radio_row input {
     margin-left: 180px;
