--- a/public/stylesheets/ui/custom_dialogs.css
+++ b/public/stylesheets/ui/custom_dialogs.css
@@ -100,12 +100,18 @@
     display: inline-block;
 }
 
-#file_note_dialog .file_note_section {
-    height: 150px;
-    overflow-y: scroll;
+.file_note_section {
+    max-height: 150px;
+    overflow-y: auto;
+    padding: 20px 5px;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 5px;
+    margin-top: 20px;
 }
 
-#file_note_dialog .anno_note_section {
-    height: 250px;
-    overflow-y: scroll;
+.anno_note_section {
+    margin-top: 20px;
+    max-height: 250px;
+    overflow-y: auto;
 }
