--- a/public/stylesheets/ui/templates.css
+++ b/public/stylesheets/ui/templates.css
@@ -1,21 +1,4 @@
-/*--------------------------- Template Manager --------------------------------*/
-#template_manager_container {
-    margin: 0px 25px;
-}
-
-#template_manager_container h3 {
-    font-weight: bold;
-    margin-bottom: 1em;
-    font: bold 14px Arial;
-}
-
-#template_toolbar {
-    height: 26px;
-    margin-bottom: 20px;
-    position: relative;
-    z-index: 5;
-}
-
+/*--------------------------- Template Manager Dialogs --------------------------------*/
 #new_field {
     width: 40px;
     margin-right: 250px;
@@ -42,49 +25,11 @@
     display: inline-block;
 }
 
-.template_list {
-    max-width: 600px;
-    margin: auto;
-}
-
-.template_row {
-    padding: 8px;
-    width: 600px;
-    margin-top: 10px;
-    background-color: lightgray;
-    border-style: solid;
-    border-width: 1px;
-    border-color: gray;
-}
-
-.template_row.sub {
-    margin-top: 0px;
-    background-color: white;
-    border-width: 0px;
-}
-
-.template_row .title {
-    color: #000;
-    font: bold 16px/20px Helvetica, Arial;
-    padding-left: 64px;
-    display: inline-block;
-    width: 250px;
-    position: relative;
-}
-
-.template_row .title.subtemplate {
-    padding-left: 96px;
-}
-
 .button_cell {
     padding-left: 24px;
     float: right;
     position: relative;
     top: -2px;
-}
-
-.minibutton {
-    margin-left: 8px;
 }
 
 .minibutton.delete_template {
