WPD integration Pt 1

--- a/app/views/documents/loader.js.erb
+++ b/app/views/documents/loader.js.erb
@@ -1,6 +1,7 @@
 <%
   root = DC.server_root(:agnostic => true)
   asset_root = DC::CONFIG['asset_root'] || root
+  wpd_server = DC::CONFIG['wpd_server']
 %>
 
 (function() {
