--- a/app/views/documents/_viewer_editing.html.erb
+++ b/app/views/documents/_viewer_editing.html.erb
@@ -19,6 +19,8 @@
 
       opts['templateList'] = <%= raw @template_list %>;
 
+      opts['wpd_server'] = '<%= raw @wpd_server %>';
+
       dc.app.editor.initialize(docId, opts);
     <% end %>
     currentDocument.$('.DV-logoLink, .DV-footerLogoLink').attr({
